--- a/translations-comparison/translations-comparison/translations-comparison.csproj
+++ b/translations-comparison/translations-comparison/translations-comparison.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="project\ExcelFile.cs" />
+    <Compile Include="project\Term.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
